--- a/src/main.scss
+++ b/src/main.scss
@@ -10,3 +10,15 @@ body {
 .hidden {
   display: none;
 }
+
+.container {
+  width: 1179px;
+  margin: 0 auto;
+
+  button.radioButton {
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
