--- a/src/components/reports_page/index.scss
+++ b/src/components/reports_page/index.scss
@@ -30,3 +30,11 @@
     margin-bottom: 5px;
   }
 }
+
+.createReportButton {
+  position: absolute;
+  width: 200px;
+  height: 60px;
+  left: 500px;
+  top: 600px;
+}
